# llamaso

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml
.github/: dependabot.yml
llamaso/: inferencing_model.py  utils.py
test/: test_demo.py
